--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 /problema1/TestEstudiante/build/
 /problema2/Semana4_2_Problema2/nbproject/private/
 /problema2/Semana4_2_Problema2/build/
+/problema3/Semana4_2_Problema3/nbproject/private/
+/problema3/Semana4_2_Problema3/build/
+/problema4/Semana4_2_Problema4/nbproject/private/
