--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /problema3/Semana4_2_Problema3/nbproject/private/
 /problema3/Semana4_2_Problema3/build/
 /problema4/Semana4_2_Problema4/nbproject/private/
+/problema4/Semana4_2_Problema4/build/
